@@ -1,0 +1,52 @@
+// Copyright (c) 2005  INRIA Sophia-Antipolis (France).
+// All rights reserved.
+//
+// This file is part of CGAL (www.cgal.org); you may redistribute it under
+// the terms of the Q Public License version 1.0.
+// See the file LICENSE.QPL distributed with CGAL.
+//
+// Licensees holding a valid commercial license may use this file in
+// accordance with the commercial license agreement provided with the software.
+//
+// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+//
+// $Source: 
+// $Revision$ $Date$
+// $Name$
+//
+// Author(s)     : Laurent Rineau
+
+
+#ifndef CGAL_SURFACE_MESHER_POINT_SURFACE_INDICES_VISITOR_H
+#define CGAL_SURFACE_MESHER_POINT_SURFACE_INDICES_VISITOR_H
+
+namespace CGAL {
+
+  namespace Surface_mesher {
+
+  /** Model of the OracleVisitor concept.
+      This model of OracleVisitor sets the point "surface_index" to a
+      constant \c int.
+   */
+  template <class Tr>
+  struct Point_surface_indices_visitor
+  {
+    const int i;
+
+    Point_surface_indices_visitor(const int index) : i(index)
+    {
+    }
+
+    void new_point(typename Tr::Point& p) const
+    {
+      p.set_surface_index(i);
+    }
+  }; // end class Point_surface_indices_visitor
+
+  }  // namespace Surface_mesher
+
+} // namespace CGAL
+
+
+#endif  // CGAL_SURFACE_MESHER_POINT_SURFACE_INDICES_VISITOR_H
